--- a/dbt_project/profiles.yml
+++ b/dbt_project/profiles.yml
@@ -5,12 +5,12 @@ dbt_project:
       job_retries: 1
       threads: 1
       type: teradata
-      host: devtools-test-25wbjoteev9ujvxw.env.clearscape.teradata.com
-      schema: ecommerce_demo
+      host: your_teradata_instance_hostname # Update this field with your teradata instance hostname
+      schema: 
       tmode: ANSI
       logmech: TD2
-      user: demo_user
-      password: Devtools@123
+      user: your_teradata_database_username # Update this field with your teradata instance database name
+      password: your_teradata_database_password # Update this field with your teradata instance password
   target: dev
 
   
