--- a/orchestration/.env.example
+++ b/orchestration/.env.example
@@ -8,4 +8,4 @@ _AIRFLOW_WWW_USER_USERNAME=airflow
 _AIRFLOW_WWW_USER_PASSWORD=airflow
 AIRFLOW__CORE__TEST_CONNECTION=Enabled
 DBT_PROJ_DIR="../dbt_project"
-GCP_SERVICE_ACCOUNT_PATH="/path/to/your/service/accounts/directory"
+EXPORT AIRFLOW_VAR_DBT_PP_DIR="/opt/airflow/dbt_project"
