--- a/orchestration/requirements.txt
+++ b/orchestration/requirements.txt
@@ -1,4 +1,6 @@
-dbt-core~=1.7.1
-astronomer-cosmos~=1.1.0
+dbt-teradata~=1.7.1
 apache-airflow-providers-teradata~=2.0.0
 apache-airflow-providers-airbyte~=3.3.2
+
+pendulum~=3.0.0
+Flask~=2.2.5
